--- a/JavaWebPj/WebContent/index.html
+++ b/JavaWebPj/WebContent/index.html
@@ -8,5 +8,10 @@
 	<h1>자바 시작</h1>
 	<p>내용을 넣으면 서버를 재시작 하지않고 새로고침만 해도 가능 (WebContent에 있는것만)</p>
 	<p>Java 코드에서 수정하엿다면 서버를 재시작해야함 (java 코드는 컴파일 되어야 하기 때문에)</p>
+	<a href="Main">Get 방식 호출</a>
+	<hr>
+	<form action="Main" method="post">
+		<input type = "submit" value="Post 방식 요청">
+	</form>
 </body>
 </html>
